changed de bg img and its position for classes pg and fixed overflow on pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,6 @@ html  {
 scroll-behavior: smooth;
 font-family:'Roboto', sans-serif;
 color:#404040; 
-
 }
 
 body {
@@ -160,7 +159,11 @@ font-size:2.1rem;
 [class*="col-"] {
   padding: 0.5rem;
 }
-
+/*--- Bootstrap Mobile Gutter Fix --*/
+.row, .container-fluid{
+margin-left: 0px!important;
+margin-right: 0px!important;
+}
 /*--- Fix for Fixed Navbar jumping on scroll --*/
 .fixed-top  {
  -webkit-backface-visibility: hidden;
@@ -329,12 +332,12 @@ height: 700px;
    background-image: url("../images/hero-img-about.jpg");
 }
 .hero-image-classes{
-    background-image: url("../images/hero-img-classesrs.jpg");
-      background-position: center 35%;
+    background-image: url("../images/hero-img-classes.jpg");
+    
 }
 .hero-image-contact{
     background-image: url("../images/hero-img-contact.jpg");
-     background-position: center 35%;
+     background-position: center 30%;
 }
 
 /*----------Teachers section--------------*/
@@ -598,6 +601,7 @@ color: #2c0f07!important;
     background: #CB4A2E!important;
     color: #fff;
     border-radius: 18px!important;
+    font-size:17px!important;
     text-transform: uppercase;
       padding: 15px 30px;
   margin: 15px 10px;
